--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,10 +15,10 @@ spec:
       containers:
         - name: ocr-service
           image: mspawanranjith/ocr-service:latest
-          resources:
-            limits:
-              memory: "1024Mi"
-              cpu: "1000m"
+          # resources:
+          #   limits:
+          #     memory: "1024Mi"
+          #     cpu: "1000m"
           env:
             - name: TESSERACT_PATH
               value: /usr/bin/tesseract
